# merge_picture_C99

./: .gitignore  CMakeLists.txt  README_zh.md  build.bat
src/: bar_detector.c  bar_detector.h  image_io.c  image_io.h  main.c  overlap_finder.c  overlap_finder.h  row_signature.c  row_signature.h  sticky_header.c  sticky_header.h  stitcher.c  stitcher.h
tests/: picmerge_tests.c
